hphp/test/zend/good/ext/spl/tests/iterator_to_array.php.expectf

Warning: iterator_to_array() expects at least 1 parameter, 0 given in %s/iterator_to_array.php on line 6

Warning: iterator_to_array() expects at most 2 parameters, 3 given in %s/iterator_to_array.php on line 9

Catchable fatal error: Argument must implement interface Traversable in %s/iterator_to_array.php on line 11
